# tauri-template

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
mysql/: Makefile  docker-compose.yml
mysql/sql/: create.sql
src/: App.tsx  data.ts
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: helloworld.proto
src-tauri/src/: client.rs  db.rs  main.rs
src-tauri/src/service/: main.rs
