[package]
name = "tauri-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "service"
path = "src/service/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
tonic-build = "0.11"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
