[package]
name = "project-template"
version = "0.0.1"
description = "Project template for general usage"
authors = ["bruceunx<bruceunx@outlook.com>"]
edition = "2021"

[[bin]]
name = "service"
path = "src/service/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
tonic-build = "0.11"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
sqlx = { version = "0.7", features = [ "json", "time", "mysql", "runtime-tokio" ] }
dotenv = "0.15"

# [dependencies.tauri-plugin-sql]
# features = ["mysql"] # or "postgres", or "mysql"
# version = "2.0.0-beta"
